<resources>
    <string name="app_name">JeremyBui-ExpenseApp</string>
    <string name="amount_hint">Amount</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="add_expense">Add Expense</string>
    <string name="personal_expense_tracker">Personal Expense Tracker</string>
    <string name="back">Back</string>
    <string name="grouped_view">Grouped View</string>
    <string name="categorized_view">Categorized View</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="filter">Filter</string>
    <string name="filter_by_date_">Filter By Date</string>
    <string name="filter_by_date_dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="reset">Reset</string>
    <string-array name="expense_categories">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Fuel</item>
        <item>Automotive</item>
        <item>Misc</item>
    </string-array>
    <string-array name="expense_categories_all">
        <item>All</item>
        <item>Food</item>
        <item>Entertainment</item>
        <item>Housing</item>
        <item>Utilities</item>
        <item>Fuel</item>
        <item>Automotive</item>
        <item>Misc</item>
    </string-array>
</resources>